--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <div id="map"></div>
 
     <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+    <!-- <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script> -->
     <script type='text/javascript' src='js/knockout-3.4.0.js'></script>
     <script type='text/javascript' src='js/map.js'></script>
     <script type='text/javascript' src='js/app.js'></script>
