--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <!-- <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script> -->
     <script type='text/javascript' src='js/knockout-3.4.0.js'></script>
     <script type='text/javascript' src='js/app.js'></script>
-    <script type='text/javascript' src='js/map2.js'></script>
+    <!-- <script type='text/javascript' src='js/map2.js'></script> -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI_y-x_J8MWvtvFhQ8h8ID5cTYkrJaURY&libraries=places&callback=initMap"
     async defer></script>
 
