--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI_y-x_J8MWvtvFhQ8h8ID5cTYkrJaURY"></script>
 
 </head>
 <body>
     <div id="searchBox"></div>
     <ul data-bind="foreach: placeList" id="list">
-      <li data-bind="text: name, click: $parent.setCurrentPlace"></li>
+      <li data-bind="text: $data.name, click: listClick($data.item())"></li>
     </ul>
     <div id="map"></div>
 
@@ -18,9 +19,7 @@
     <!-- <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script> -->
     <script type='text/javascript' src='js/knockout-3.4.0.js'></script>
     <script type='text/javascript' src='js/app.js'></script>
-    <!-- <script type='text/javascript' src='js/map2.js'></script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI_y-x_J8MWvtvFhQ8h8ID5cTYkrJaURY&libraries=places&callback=initMap"
-    async defer></script>
+    <script>initMap();</script>
 
 </body>
 </html>
