Search filters markers, listclick working, usinf app1

--- a/src/index.html
+++ b/src/index.html
@@ -9,17 +9,17 @@
 
 </head>
 <body>
-    <div id="searchBox"></div>
-    <ul data-bind="foreach: placeList" id="list">
-      <li data-bind="text: $data.name, click: listClick($data.item())"></li>
+    <input type="search" placeholder="Search Location" size="35" data-bind="textInput: query, valueUpdate: 'keyup'"/>
+    <ul data-bind="foreach: allPlaces" id="list">
+      <li data-bind="text: $data.name, click: $parent.listClick"></li>
     </ul>
     <div id="map"></div>
 
     <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script> -->
     <script type='text/javascript' src='js/knockout-3.4.0.js'></script>
-    <script type='text/javascript' src='js/app.js'></script>
-    <script>initMap();</script>
+    <script type='text/javascript' src='js/app1.js'></script>
+    <!-- <script>initMap();</script> -->
 
 </body>
 </html>
