Yelp request works. Added lib folder

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
 
     <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script> -->
-    <script type='text/javascript' src='js/knockout-3.4.0.js'></script>
-    <script type='text/javascript' src='js/oauth-signature.js'></script>
+    <script type='text/javascript' src='lib/knockout-3.4.0.js'></script>
+    <script type='text/javascript' src='lib/oauth-signature.js'></script>
     <script type='text/javascript' src='js/app1.js'></script>
 </body>
 </html>
