--- a/src/index.html
+++ b/src/index.html
@@ -3,26 +3,42 @@
 <head>
     <title>Neighborhood Map Project</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header class="header col-md-12 col-sm-12">
-        <h2 id="heading-text">Delicious South Denver Eateries!</h2>
-        <p>Search through the following list to isolate location:</p>
-    </header>
-    <input type="search" placeholder="Search Location" size="50" data-bind="textInput: query"/>
-    <!-- <input type="search" placeholder="Search Location" size="50" data-bind="textInput: query, valueUpdate: 'keyup'"/> -->
-    <ul data-bind="foreach: search" id="list">
-      <li data-bind="text: $data.name, click: $parent.listClick"></li>
-    </ul>
-    <div id="map" class="col-md-12 col-sm-12 col-xs-12"></div>
-    <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <div class="container">
+        <div class="row page-header>"
+            <header class="header col-md-12">
+                <h2 id="heading-text">Delicious South Denver Eateries!</h2>
+            </header>
+        </div>
+        <form>
+        <div class="form group">
+                <label for="searchInput">Search through the restaurant list to filter locations:</label>
+                <input type="search" class="form-control" id="searchInput" placeholder="Search Location" data-bind="textInput: query"/>
+        </div>
+    </form>
+        <hr>
+        <div class="row">
+            <div class="col-md-3">
+                <ul data-bind="foreach: search" id="list" class="list-unstyled">
+                    <li data-bind="text: $data.name, click: $parent.listClick"></li>
+                </ul>
+            </div>
+            <div class="col-md-9 map-container">
+                <div id="map_canvas"></div>
+            </div>
+        </div>
+    </div>
+    <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <!-- <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script> -->
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script type='text/javascript' src='lib/knockout-3.4.0.js'></script>
     <script type='text/javascript' src='lib/oauth-signature.js'></script>
-    <script type='text/javascript' src='js/app1.js'></script>
+    <script type='text/javascript' src='js/app.js'></script>
     <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI_y-x_J8MWvtvFhQ8h8ID5cTYkrJaURY&callback=googleSuccess" onerror="googleError()"></script>
 </body>
 </html>
