--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="lib/knockout-3.4.0.js"></script>
-    <script src="lib/oauth-signature.js"></script>
-    <!-- <script src="js/places.json"></script> -->
-    <script src="js/app.js"></script>
+    <script src="dist/lib/knockout-3.4.0.js"></script>
+    <script src="dist/lib/oauth-signature.js"></script>
+    <script src="dist/js/app.js"></script>
     <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI_y-x_J8MWvtvFhQ8h8ID5cTYkrJaURY&callback=googleSuccess" onerror="googleError()"></script>
 </body>
 </html>
