Minor bugfixes - pt2

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="dist/lib/knockout-3.4.0.js"></script>
     <script src="dist/lib/oauth-signature.js"></script>
-    <script src="src/js/app.js"></script>
+    <script src="dist/js/app.js"></script>
     <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI_y-x_J8MWvtvFhQ8h8ID5cTYkrJaURY&callback=googleSuccess" onerror="googleError()"></script>
 </body>
 </html>
